--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,28 +1,38 @@
 .navbar {
-    background-color: rgb(209,230,222);
+  background-color: rgb(209, 230, 222);
 }
 
 .homeImage {
-    background-image: url('../images/böreks.jpg');
-    height: calc(100vh - 106px);
-    background-size: cover;
-    background-position: center;
+  background-image: url("https://www.farukgulluoglu.com.tr/UserFiles/Fotograflar/org/78-183-jpg-183.jpg");
+  height: calc(100vh - 106px);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  opacity: 0.8;
 }
 
 #warning {
-    margin-top: 5px;
-    background-color: lightcoral;
-    color: aliceblue;
-    margin: auto;
-    height: 40px;
-    text-align: center;
+  margin-top: 5px;
+  background-color: lightcoral;
+  color: aliceblue;
+  margin: auto;
+  height: 40px;
+  text-align: center;
 }
 
 #success {
-    margin-top: 5px;
-    background-color: darkseagreen ;
-    color:rgb(231, 200, 158);
-    margin: auto;
-    height: 40px;
-    text-align: center;
+  margin-top: 5px;
+  background-color: darkseagreen;
+  color: rgb(231, 200, 158);
+  margin: auto;
+  height: 40px;
+  text-align: center;
+}
+
+.borek {
+  z-index: 10;
+  position: absolute;
+  top: 30rem;
+  left: 30%;
+  
 }
